--- a/rootdir/etc/init.odroidxu3.rc
+++ b/rootdir/etc/init.odroidxu3.rc
@@ -304,11 +304,20 @@ service gps_cfg /system/bin/sh /system/etc/init.gps.sh
     disabled
     oneshot
 
+service usb_modeswitch /system/bin/bash /system/bin/usb_modeswitch.sh
+    class main
+    user root
+    disabled
+    oneshot
+
 on property:ro.radio.noril=0
     setprop rild.libpath "/system/lib/libril-rk29-dataonly.so"
 
 on property:ro.disable.ethernet=0
     start insmod_ax88179
+
+on property:ro.disable.ethernet=1
+   start usb_modeswitch
 
 on property:init.svc.insmod_ax88179=stopped
     start insmod_r8152
