fix some path names to hopefully get usb_modeswitch to work natively at boot time

--- a/rootdir/etc/init.odroidxu3.rc
+++ b/rootdir/etc/init.odroidxu3.rc
@@ -304,7 +304,7 @@ service gps_cfg /system/bin/sh /system/etc/init.gps.sh
     disabled
     oneshot
 
-service usb_modeswitch /system/bin/bash /system/bin/usb_modeswitch.sh
+service usb_modeswitch /system/xbin/bash /system/bin/usb_modeswitch.sh
     class main
     user root
     disabled
