--- a/configs/audio_policy.conf
+++ b/configs/audio_policy.conf
@@ -58,9 +58,9 @@ audio_hw_modules {
         devices AUDIO_DEVICE_OUT_USB_ACCESSORY
       }
       usb_device {
-        sampling_rates dynamic
-        channel_masks dynamic
-        formats dynamic
+        sampling_rates 48000
+        channel_masks AUDIO_CHANNEL_OUT_STEREO
+        formats AUDIO_FORMAT_PCM_24_BIT
         devices AUDIO_DEVICE_OUT_USB_DEVICE
       }
     }
